Fix z-index bug, position of pager. I have change z-index(1-> 10) of Nav in Resource.

--- a/VMS/Pages/OrganizationManagementPage/ActivitiesCard.razor.scss
+++ b/VMS/Pages/OrganizationManagementPage/ActivitiesCard.razor.scss
@@ -315,7 +315,7 @@
     }
 }
 
-::deep .pagination {
-    color: rebeccapurple !important;
-    justify-content: flex-end !important;
+.pagination-org {
+    display: flex;
+    justify-content: flex-end;
 }
