--- a/VMS/Resources/scss/common/NavBar.scss
+++ b/VMS/Resources/scss/common/NavBar.scss
@@ -1,7 +1,7 @@
 ﻿@import '_variables';
 .my-navbar {
     min-height: 85px;
-    z-index: 1;
+    z-index: 10;
 
     @include on('lg') {
         min-height: 110px;
