--- a/VMS/Shared/NavMenu.razor.css
+++ b/VMS/Shared/NavMenu.razor.css
@@ -6,7 +6,7 @@
 /*#endregion */
 .my-navbar {
   min-height: 85px;
-  z-index: 1; }
+  z-index: 10; }
   @media (min-width: 992px) {
     .my-navbar {
       min-height: 110px; } }
